Product Page Added

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,6 +55,10 @@ body {
   font-size: 1.5rem;
 }
 
+.new-card-text {
+  min-height: 200px;
+}
+
 .new-card-title::after {
   content: "";
   position: absolute;
